fix align bug

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -726,10 +726,6 @@ video {
   z-index: 50;
 }
 
-.z-\[60\] {
-  z-index: 60;
-}
-
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
